@@ -1,3 +1,5 @@
+Toshiba-GL_1010 Toshiba-GL-1010
+Toshiba-GL_1020 Toshiba-GL-1020
 Tektronix-3693d_color_printer_8-bit_mode Tektronix-4693d
 Tektronix-4693d_color_printer_2-bit_mode Tektronix-4693d
 Tektronix-4693d_color_printer_4-bit_mode Tektronix-4693d
