@@ -1,6 +1,6 @@
-<printer id="printer/Toshiba-GL_1010">
+<printer id="printer/Toshiba-GL-1020">
   <make>Toshiba</make>
-  <model>GL 1010</model>
+  <model>GL-1020</model>
   <mechanism>
     <laser />
     <resolution>
@@ -23,7 +23,7 @@
   </lang>
   <autodetect>
     <snmp>
-      <description>TOSHIBA GL 1010</description>
+      <description>TOSHIBA GL 1020</description>
     </snmp>
   </autodetect>
   <functionality>A</functionality>
@@ -34,7 +34,7 @@
     </driver>
     <driver>
       <id>Postscript-Toshiba</id>
-      <ppd>PPD/Toshiba/Toshiba_GL1010_CUPS.ppd</ppd>
+      <ppd>PPD/Toshiba/Toshiba_GL1020_CUPS.ppd</ppd>
     </driver>
   </drivers>
 </printer>
