@@ -1,3 +1,10 @@
+2010-09-10  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Toshiba-GL_1010.xml, printer/Toshiba-GL_1020.xml,
+	  printer/Toshiba-GL-1010.xml, printer/Toshiba-GL-1020.xml,
+	  db/oldprinterids: Renamed the printers to match the names in the
+	  manufacturer-supplied PPD files.
+
 2010-09-07  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/printer/Sharp-AR-168D.xml,
